[gd_scene load_steps=30 format=3 uid="uid://w5jp7xiwbom2"]

[ext_resource type="Script" path="res://src/characters/zombie_lightheaded.gd" id="1_67l0b"]
[ext_resource type="PackedScene" uid="uid://1pi66kn11gia" path="res://scenes/misc/cartesian_frame.tscn" id="3_7hl4o"]
[ext_resource type="Script" path="res://src/characters/hitbox.gd" id="4_txt0a"]
[ext_resource type="Script" path="res://src/utils/state_machine.gd" id="5_t7hkg"]
[ext_resource type="Script" path="res://scenes/characters/zombie_state_machine/spawning.gd" id="6_i0ofs"]
[ext_resource type="Script" path="res://scenes/characters/zombie_state_machine/lightheaded_moving.gd" id="7_w5pcy"]
[ext_resource type="Script" path="res://scenes/characters/zombie_state_machine/attacking.gd" id="8_mwa3d"]
[ext_resource type="Script" path="res://scenes/characters/zombie_state_machine/dying.gd" id="9_wiah7"]
[ext_resource type="Script" path="res://scenes/characters/zombie_state_machine/throwing_head.gd" id="10_40782"]
[ext_resource type="Script" path="res://src/utils/audio_stream_pool.gd" id="10_muvpb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qa7va"]
albedo_color = Color(0.376471, 0.576471, 0.219608, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gj5mv"]
material = SubResource("StandardMaterial3D_qa7va")
radius = 0.2
height = 1.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gfxlp"]
albedo_color = Color(0.392157, 0.588235, 0.196078, 1)

[sub_resource type="SphereMesh" id="SphereMesh_mflfg"]
material = SubResource("StandardMaterial3D_gfxlp")
radius = 0.2
height = 0.4

[sub_resource type="SphereShape3D" id="SphereShape3D_ljs3k"]
radius = 0.218252

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ldqpj"]
radius = 0.216779
height = 1.12117

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_67rti"]
albedo_color = Color(0.376471, 0.576471, 0.219608, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_8uvvw"]
material = SubResource("StandardMaterial3D_67rti")
radius = 0.05
height = 0.5

[sub_resource type="Animation" id="Animation_jxpni"]
resource_name = "Attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.4, 0.7),
"transitions": PackedFloat32Array(-2, -2, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0.7, 0), Vector3(0, 0.7, 0), Vector3(0, 0.76, -0.1), Vector3(0, 0.7, -0.1), Vector3(0, 0.7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 0.7),
"transitions": PackedFloat32Array(-2, -2, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.0174533, 0, 0), Vector3(-0.174533, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tos1x"]
resource_name = "Dying"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.3, 0.6), Vector3(0, -2, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, -2, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.872665, 0, 0.174533), Vector3(1.5708, 0, 0.349066)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh/HeadMesh/HeadHitbox/CollisionShape3D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_5otbi"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_txmr0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyBesh:mesh:material:albedo_color")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.376471, 0.576471, 0.219608, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyBesh/HeadMesh/HeadHitbox/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyBesh/LeftArm:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.22113, 0.49292, -0.233828)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BodyBesh/LeftArm2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.207541, 0.49292, -0.233828)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BodyBesh/LeftArm2:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.79594, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("BodyBesh/LeftArm:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.79547, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("BodyBesh/HeadMesh:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.85, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("BodyBesh/HeadMesh:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("BodyBesh/HeadMesh:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_th5hy"]
resource_name = "RegrowHead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh/HeadMesh:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh/HeadMesh:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.5, 0.5, 0.5), Vector3(1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh/HeadMesh:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.565027, 0), Vector3(0, 0.85, 0)]
}

[sub_resource type="Animation" id="Animation_70f4u"]
resource_name = "Spawn"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 1.5),
"transitions": PackedFloat32Array(1, 1, 2, 1),
"update": 0,
"values": [Vector3(0, -0.586215, 0.238634), Vector3(0, -0.157477, 0.159089), Vector3(0, -0.212179, 0.159089), Vector3(0, 0.7, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5, 1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 2, 1, 1, 1),
"update": 0,
"values": [Vector3(1.14766, 0, 0), Vector3(0.765106, 0, 0), Vector3(0.718663, 0, 0), Vector3(0.528241, -0.112613, -0.220726), Vector3(0.215841, -0.00764923, 0.0877131), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_emstt"]
resource_name = "TakeDamage"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:mesh:material:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(0.376471, 0.576471, 0.219608, 1), Color(0.596078, 0.498039, 0.254902, 1), Color(0.376471, 0.576471, 0.219608, 1)]
}

[sub_resource type="Animation" id="Animation_ibv0t"]
resource_name = "ThrowHead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh/LeftArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(-2, 1, -2, 0.5, 1),
"update": 0,
"values": [Vector3(-0.22113, 0.49292, -0.233828), Vector3(-0.208, 0.6, 0.008), Vector3(-0.208, 0.75, 0.008), Vector3(-0.208, 0.75, 0.0694829), Vector3(-0.22113, 0.49292, -0.233828)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh/LeftArm2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(-2, 1, -2, 0.5, 1),
"update": 0,
"values": [Vector3(0.207541, 0.49292, -0.233828), Vector3(0.208, 0.6, 0.008), Vector3(0.208, 0.75, 0.008), Vector3(0.208, 0.75, 0.0737889), Vector3(0.207541, 0.49292, -0.233828)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BodyBesh/LeftArm2:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(-2, 1, -2, 0.5, 1),
"update": 0,
"values": [Vector3(-1.79594, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.349066, 0, 0), Vector3(-1.79594, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BodyBesh/LeftArm:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(-2, 1, -2, 0.5, 1),
"update": 0,
"values": [Vector3(-1.79547, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0.349066, 0, 0), Vector3(-1.79547, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BodyBesh/HeadMesh:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2),
"transitions": PackedFloat32Array(-2, 1, -2, 0.5, 1),
"update": 0,
"values": [Vector3(0, 0.85, 0), Vector3(0, 0.85, 0), Vector3(0, 1, 0), Vector3(0, 0.957916, 0.122303), Vector3(0, 1, -1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BodyBesh/HeadMesh:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.5, 1.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_tngj2"]
resource_name = "Walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BodyBesh:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0.7, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BodyBesh:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.0349066), Vector3(0, 0, -0.0349066)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q515n"]
_data = {
"Attack": SubResource("Animation_jxpni"),
"Dying": SubResource("Animation_tos1x"),
"Idle": SubResource("Animation_5otbi"),
"RESET": SubResource("Animation_txmr0"),
"RegrowHead": SubResource("Animation_th5hy"),
"Spawn": SubResource("Animation_70f4u"),
"TakeDamage": SubResource("Animation_emstt"),
"ThrowHead": SubResource("Animation_ibv0t"),
"Walk": SubResource("Animation_tngj2")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mwuge"]
radius = 0.3956
height = 1.46319

[node name="ZombieLightHeaded" type="CharacterBody3D" groups=["Zombies"]]
collision_layer = 32
collision_mask = 33
floor_snap_length = 0.21
script = ExtResource("1_67l0b")
moving_speed = 2.0
attack_damage = 2.0
base_color = Color(0.643137, 0.498039, 0.192157, 1)

[node name="CartesianFrame" parent="." instance=ExtResource("3_7hl4o")]
visible = false

[node name="BodyBesh" type="MeshInstance3D" parent="."]
layers = 4
mesh = SubResource("CapsuleMesh_gj5mv")

[node name="HeadMesh" type="MeshInstance3D" parent="BodyBesh"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
layers = 4
mesh = SubResource("SphereMesh_mflfg")

[node name="HeadHitbox" type="StaticBody3D" parent="BodyBesh/HeadMesh"]
collision_layer = 128
collision_mask = 0
script = ExtResource("4_txt0a")
damage_multiplier = 10.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="BodyBesh/HeadMesh/HeadHitbox"]
shape = SubResource("SphereShape3D_ljs3k")

[node name="BodyHitbox" type="StaticBody3D" parent="BodyBesh"]
collision_layer = 128
collision_mask = 0
script = ExtResource("4_txt0a")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BodyBesh/BodyHitbox"]
transform = Transform3D(0.999874, 0, -0.0158469, 0, 1, 0, 0.0158469, 0, 0.999874, 0, 0.180954, 0)
shape = SubResource("CapsuleShape3D_ldqpj")

[node name="LeftArm" type="MeshInstance3D" parent="BodyBesh"]
transform = Transform3D(1, 0, 0, 0, -0.222788, 0.974867, 0, -0.974867, -0.222788, -0.22113, 0.49292, -0.233828)
layers = 2
mesh = SubResource("CapsuleMesh_8uvvw")

[node name="LeftArm2" type="MeshInstance3D" parent="BodyBesh"]
transform = Transform3D(1, 0, 0, 0, -0.223246, 0.974762, 0, -0.974762, -0.223246, 0.207541, 0.49292, -0.233828)
layers = 2
mesh = SubResource("CapsuleMesh_8uvvw")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
navigation_layers = 3
avoidance_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spawn"
playback_default_blend_time = 0.05
libraries = {
"": SubResource("AnimationLibrary_q515n")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.728528, 0)
shape = SubResource("CapsuleShape3D_mwuge")

[node name="ZombieStateMachine" type="Node" parent="."]
script = ExtResource("5_t7hkg")
initial_state = NodePath("Spawning")

[node name="Spawning" type="Node" parent="ZombieStateMachine"]
script = ExtResource("6_i0ofs")

[node name="Moving" type="Node" parent="ZombieStateMachine"]
script = ExtResource("7_w5pcy")

[node name="Attacking" type="Node" parent="ZombieStateMachine"]
script = ExtResource("8_mwa3d")

[node name="Dying" type="Node" parent="ZombieStateMachine"]
script = ExtResource("9_wiah7")

[node name="ThrowingHead" type="Node" parent="ZombieStateMachine"]
script = ExtResource("10_40782")

[node name="AudioStreamPool" type="Node3D" parent="."]
script = ExtResource("10_muvpb")
pool_size = 1
